# dnslib

./: .gitignore  .hgignore  .hgtags  MANIFEST.in  README  README.github  README.md  TODO  fuzz.py  hgrc  pyproject.toml  run_tests.sh  setup.py  tests
.github/workflows/: pythonpackage.yml  test.yml
dnslib/: __init__.py  bimap.py  bit.py  buffer.py  client.py  digparser.py  dns.py  fixedresolver.py  intercept.py  label.py  lex.py  proxy.py  ranges.py  server.py  shellresolver.py  test_decode.py  test_unpack.py  zone.py  zoneresolver.py
dnslib/server/: circuits_server.py  gevent_server.py  proxy.py  server.py  udp_proxy.py  udp_server.py
dnslib/test/: 1.1.1.1.in-addr.arpa.-PTR  _sip._udp.sipgate.co.uk-SRV  cloudflare.com-AAAA  cloudflare.com-AAAA-dnssec  cloudflare.com-CNAME  cloudflare.com-MX-dnssec  cloudflare.com-NS  cloudflare.com-NS-dnssec  cloudflare.com-SOA  cloudflare.com-SOA-dnssec  cloudflare.com-TXT  example.org-DNSKEY  example.org-MX-dnssec  example.org-PTR-dnssec  google.com-ANY  google.com-NS  google.com-SOA  he.net-NS  he.net-SOA  he.net-TXT  iana.org-A  iana.org-A-dnssec  iana.org-MX-dnssec  iana.org-TXT-dnssec  openssl.org-TLSA  www.example.com-A-dnssec  www.example.org-AAAA-dnssec  www.example.org-ANY-dnssec  www.example.org-TXT-dnssec  www.google.com-AAAA  www.he.net-CNAME  www.iana.org-A-dnssec  www.iana.org-AAAA-dnssec  www.iana.org-CNAME-dnssec
src/: README  bimap.py  bit.py  buffer.py  dns.py  dnserror.py  dnsname.py  dnsrr.py  dnstype.py  label.py  map.py
src/dnslib/: __init__.py  bimap.py  bit.py  buffer.py  client.py  digparser.py  dns.py  fixedresolver.py  intercept.py  label.py  lex.py  proxy.py  ranges.py  server.py  shellresolver.py  test_decode.py  zoneresolver.py
src/dnslib/servers/: fixedresolver.py  intercept.py  proxy.py  shellresolver.py  zoneresolver.py
src/dnslib/test/: 8.8.8.8.in-addr.arpa.-PTR  9.9.9.9.in-addr.arpa.-PTR  ECC94C1D-7026-41AA-B47E-FDFE40EB9957.com-A  cloudflare.com-A  cloudflare.com-A-dnssec  cloudflare.com-CNAME-dnssec  cloudflare.com-MX  cloudflare.com-TXT-dnssec  example.org-DS  example.org-SOA-dnssec  fedoraproject.org-TLSA  google.com-MX  google.com-TXT  he.net-MX  iana.org-AAAA  iana.org-AAAA-dnssec  iana.org-DNSKEY  iana.org-MX  iana.org-NS  iana.org-NS-dnssec  iana.org-PTR-dnssec  iana.org-SOA  iana.org-SOA-dnssec  iana.org-TXT  oilpro.ch-TYPE65534  salsa.debian.org-SSHFP  sip2sip.info-NAPTR  www.example.org-A-dnssec  www.example.org-CNAME-dnssec  www.google.com-A  www.google.com-CNAME  www.he.net-A  www.he.net-AAAA  www.iana.org-A-dnssec  www.iana.org-AAAA-dnssec  www.iana.org-ANY-dnssec
src/server/: gevent_server.py
